--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Showcase">
+        
         <activity
             android:name=".activities.SplashActivity"
             android:exported="true"
@@ -46,15 +47,8 @@
             android:name=".activities.MapActivity"
             android:exported="true"
             android:label="@string/title_activity_map" />
-        <activity
-            android:name=".activities.PortfolioListActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".activities.PortfolioListActivity" />
+        <activity android:name=".activities.ProjectListActivity" />
         <activity android:name=".activities.PortfolioActivity" />
         <activity android:name=".activities.ProjectActivity" />
         <activity android:name=".activities.ProjectMapsActivity" />
